2.82 Z axis line doesn't show alone on the workspace #73815

Closed
opened 2020-02-14 18:55:16 +01:00 by fco perez · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error

Hello.

It's not a serious problem, but
I've found that in any workspace, the Z axis lines don't show alone (as the x or y does) when "Show overlays " is active. Only does when another axis or the floor is checked as "show the..."

(note: in the case of doing a constrained transformation ( G, R, S...) it is shown until I confirm the transformation )

Exact steps for others to reproduce the error

Z_axis_alone.png

Z_axis_w_axis.png

Z_axis_w_floor.png
It happens in my custom Startup File, in the "default factory settings", and in files created in 2.81

Thanks for your help

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** Hello. It's not a serious problem, but I've found that in any workspace, the Z axis lines don't show alone (as the x or y does) when "Show overlays " is active. Only does when another axis or the floor is checked as "show the..." (note: in the case of doing a constrained transformation ( G, R, S...) it is shown until I confirm the transformation ) **Exact steps for others to reproduce the error** ![Z_axis_alone.png](https://archive.blender.org/developer/F8339963/Z_axis_alone.png) ![Z_axis_w_axis.png](https://archive.blender.org/developer/F8339964/Z_axis_w_axis.png) ![Z_axis_w_floor.png](https://archive.blender.org/developer/F8339962/Z_axis_w_floor.png) It happens in my custom Startup File, in the "default factory settings", and in files created in 2.81 Thanks for your help
Author

Added subscriber: @nobebocafe

Added subscriber: @nobebocafe

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @nys123

Added subscriber: @nys123

The problem seems to occur regardless of starting a new project or from older version. The bug can be reproduced in the workspaces that the axes are not visible in default such as sculpting, shading and animation (left area).
Also confirmed for version: 2.83 (sub 2), branch: master, commit date: 2020-02-14 03:00, hash: 9e74c071b6

The problem seems to occur regardless of starting a new project or from older version. The bug can be reproduced in the workspaces that the axes are not visible in default such as sculpting, shading and animation (left area). Also confirmed for version: 2.83 (sub 2), branch: master, commit date: 2020-02-14 03:00, hash: `9e74c071b6`

This issue was referenced by 842e817bf7

This issue was referenced by 842e817bf77830d003e466e8465e60d40517c782

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-04-17 21:54:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73815
No description provided.