Fix T73815 Overlay: Z axis line doesn't show alone on the workspace